server more files; open mic

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -31,5 +31,9 @@
     $('#messages').append($('<li>').text(msg));
   });
 </script>
+<script src="client.js"></script>
+<script>
+  var client = new MusicCodeClient();
+</script>
   </body>
 </html>
