--- a/server/public/index.html
+++ b/server/public/index.html
@@ -7,6 +7,8 @@
       body { font: 13px Helvetica, Arial; }
       .main { width: 600px; height: 600px; background: #eee; }
       .note { fill: #0f0; }
+      .group { stroke: #f00; stroke-width: 1; fill-opacity: 0; }
+      .code { fill: #000; }
     </style>
   </head>
   <body>
