--- a/server/public/index.html
+++ b/server/public/index.html
@@ -5,15 +5,30 @@
     <style>
       * { margin: 0; padding: 0; box-sizing: border-box; }
       body { font: 13px Helvetica, Arial; }
-      .main { width: 600px; height: 600px; background: #eee; }
+      .container { width: 600px; height: 600px; }
+      .main { width: 300px; height: 600px; background: #eee; position: absolute; }
+      .list { width: 300px; height: 300px; position: absolute; top: 0; left: 300px; overflow: scroll; }
+      .view { width: 300px; height: 300px; position: absolute; top: 300px; left: 300px;  }
+      #viewframe { width: 100%; height: 100%; overflow: scroll; }
       .note { fill: #0f0; }
       .group { stroke: #f00; stroke-width: 1; fill-opacity: 0; }
       .code { fill: #000; }
+      .codelink { cursor: pointer; background: #bbb; height: 50px; width: 90%; display: block; border: 1px solid red; margin: 5px; }
+      .codeimage { width: 45px; height: 45px; }
+      .codetitle { display: inline; padding: 5px; font-size: 150%; }
     </style>
   </head>
   <body>
-    <svg id="main" class="main">
-    </svg>
+    <div class="container">
+      <svg id="main" class="main">
+      </svg>
+      <div class="list">
+        <ul id="links"></ul>
+      </div>
+      <div class="view">
+        <iframe id="viewframe"></iframe>
+      </div>
+    </div>
 <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
 <script src="http://code.jquery.com/jquery-1.11.1.js"></script>
 <script src="//d3js.org/d3.v3.min.js" charset="utf-8"></script>
