--- a/server/public/index.html
+++ b/server/public/index.html
@@ -5,10 +5,11 @@
     <style>
       * { margin: 0; padding: 0; box-sizing: border-box; }
       body { font: 13px Helvetica, Arial; }
-      .container { width: 600px; height: 600px; }
+      .container { width: 600px; height: 900px; }
       .main { width: 300px; height: 600px; background: #eee; position: absolute; }
-      .list { width: 300px; height: 300px; position: absolute; top: 0; left: 300px; overflow: scroll; }
-      .view { width: 300px; height: 300px; position: absolute; top: 300px; left: 300px;  }
+      .notelist { width: 300px; height: 600px; position: absolute; top: 0; left: 300px; overflow: scroll; }
+      .list { width: 300px; height: 300px; position: absolute; top: 0; left: 600px; overflow: scroll; }
+      .view { width: 300px; height: 300px; position: absolute; top: 300px; left: 600px;  }
       #viewframe { width: 100%; height: 100%; overflow: scroll; }
       .note { fill: #0f0; }
       .group { stroke: #f00; stroke-width: 1; fill-opacity: 0; }
@@ -22,6 +23,9 @@
     <div class="container">
       <svg id="main" class="main">
       </svg>
+      <div class="notelist">
+        <ul id="notelist"></ul>
+      </div>
       <div class="list">
         <ul id="links"></ul>
       </div>
