resync node and wordpress client.js; add initial configuration parameters to config file (silvet parameters, stream group parameters); add fileformat.md

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -41,7 +41,17 @@
 </script>
 <script src="client.js"></script>
 <script>
-  var client = new MusicCodeClient();
+$.ajax({
+    url:"example.json",
+    dataType:"json",
+    success:function(data) {
+      console.log('loaded experience: '+JSON.stringify(data));
+      var client = new MusicCodeClient( data );
+    },
+    error:function(err) {
+      alert('Error loading experience from example.json');
+    }
+  });
 </script>
   </body>
 </html>
