--- a/server/public/index.html
+++ b/server/public/index.html
@@ -11,7 +11,8 @@
       .list { width: 300px; height: 300px; position: absolute; top: 0; left: 600px; overflow: scroll; }
       .view { width: 300px; height: 300px; position: absolute; top: 300px; left: 600px;  }
       #viewframe { width: 100%; height: 100%; overflow: scroll; }
-      .note { fill: #0f0; }
+      .note-included { fill: #0f0; }
+      .note-discarded { fill: #444; opacity: 0.3; }
       .group { stroke: #f00; stroke-width: 1; fill-opacity: 0; }
       .code { fill: #000; }
       .codelink { cursor: pointer; background: #bbb; height: 50px; width: 90%; display: block; border: 1px solid red; margin: 5px; }
