add parameter to specify experience file

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -4,9 +4,13 @@
     <title>MusicCodes</title>
   </head>
   <body>
-    <p><a href="master.html">Default Master</a></p>
-    <p><a href="slave.html">Default Slave</a></p>
-    <p><a href="master.html?r=test&p=1234">Master 'test'</a></p>
+    <p>Usage: parameter 'f' = experience filename (master)</br/>
+       parameter 'r' = room name (master/slave)</br/>
+       parameter 'p' = room PIN (master)
+    </p>
+    <p><a href="master.html?f=example.json">Default Master (master.html)</a></p>
+    <p><a href="slave.html">Default Slave (slave.html)</a></p>
+    <p><a href="master.html?f=example.json&r=test&p=1234">Master 'test'</a></p>
     <p><a href="slave.html?r=test">Slave 'test'</a></p>
   </body>
 </html>
