local copies of javascript dependencies (for offline use); keyboard input for testing

--- a/server/public/master.html
+++ b/server/public/master.html
@@ -52,9 +52,9 @@
   	  <option value="">(none)</option>
   	</select>
   </p>
-<script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
-<script src="http://code.jquery.com/jquery-1.11.1.js"></script>
-<script src="//d3js.org/d3.v3.min.js" charset="utf-8"></script>
+<script src="vendor/socket.io-1.2.0.js"></script>
+<script src="vendor/jquery-1.11.1.js"></script>
+<script src="vendor/d3.v3.min.js" charset="utf-8"></script>
 <script>
   var socket = io();
 </script>
