add master parameters for setting midi input and output

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -6,7 +6,9 @@
   <body>
     <p>Usage: parameter 'f' = experience filename (master)</br/>
        parameter 'r' = room name (master/slave)</br/>
-       parameter 'p' = room PIN (master)
+       parameter 'p' = room PIN (master)<br/>
+       parameter 'i' = midi input name (master)<br/>
+       parameter 'o' = midi output name (master)
     </p>
     <p><a href="master.html?f=example.json">Default Master (master.html)</a></p>
     <p><a href="slave.html">Default Slave (slave.html)</a></p>
