--- a/server/public/index.html
+++ b/server/public/index.html
@@ -9,10 +9,11 @@
        parameter 'p' = room PIN (master)<br/>
        parameter 'i' = midi input name (master)<br/>
        parameter 'o' = midi output name (master)
+       parameter 'c' = output channel (master/slave), default ""<br/>
     </p>
     <p><a href="master.html?f=example.json">Default Master (master.html)</a></p>
-    <p><a href="slave.html">Default Slave (slave.html)</a></p>
+    <p><a href="fullscreenslave.html">Default (full-screen) Slave (fullscreenslave.html)</a></p>
     <p><a href="master.html?f=example.json&r=test&p=1234">Master 'test'</a></p>
-    <p><a href="slave.html?r=test">Slave 'test'</a></p>
+    <p><a href="fullscreenslave.html?r=test">Slave 'test'</a></p>
   </body>
 </html>
