added initial state support - initstate, precondition, poststate and feedback

--- a/server/public/master.html
+++ b/server/public/master.html
@@ -7,7 +7,8 @@
       body { font: 13px Helvetica, Arial; }
       .container { width: 600px; height: 900px; }
       .main { width: 300px; height: 600px; background: #eee; position: absolute; }
-      .notelist { width: 300px; height: 600px; position: absolute; top: 0; left: 300px; overflow: scroll; }
+      .notelist { width: 300px; height: 300px; position: absolute; top: 0; left: 300px; overflow: scroll; border-top: 1px black; }
+      .statelist { width: 300px; height: 300px; position: absolute; top: 300px; left: 300px; overflow: scroll; border-top: 1px black solid; }
       .list { width: 300px; height: 300px; position: absolute; top: 0; left: 600px; overflow: scroll; }
       .view { width: 300px; height: 300px; position: absolute; top: 300px; left: 600px;  }
       #viewframe { width: 100%; height: 100%; overflow: scroll; }
@@ -20,10 +21,13 @@
       .codetitle { display: inline; padding: 5px; font-size: 150%; }
       #links { display: none; }
       #prefixes {}
-      .prefix { font-weight: bold; }
+      .prefix { }
       .prefix-label { white-space: nowrap; overflow: hidden; text-overflow: ellipsis; }
-      .prefix-matched { color: red;}
-      .prefix-unmatched { }
+      .prefix-matched { color: red; font-weight: bold; }
+      .prefix-unmatched { font-weight: bold; }
+      .prefix-precondition-false { color: grey; }
+      .precondition-true { color: red; }
+      .precondition-false { color: grey; }
     </style>
   </head>
   <body>
@@ -32,6 +36,9 @@
       </svg>
       <div class="notelist">
         <ul id="notelist"></ul>
+      </div>
+      <div class="statelist">
+        <ul id="statelist"></ul>
       </div>
       <div class="list">
         <ul id="links"></ul>
