--- a/server/public/index.html
+++ b/server/public/index.html
@@ -4,6 +4,8 @@
     <title>MusicCodes</title>
   </head>
   <body>
+    <h2><a href="edit/">Muzicodes Editor</a></h2>
+    <h2>Direct access to views</h2>
     <p>Usage: parameter 'f' = experience filename (master)</br/>
        parameter 'r' = room name (master/slave)</br/>
        parameter 'p' = room PIN (master)<br/>
