editor add new actions/markers on save; master show keyboard

--- a/server/public/master.html
+++ b/server/public/master.html
@@ -48,6 +48,11 @@
         <iframe id="viewframe"></iframe>
       </div>
     </div>
+  <p>Virtual keyboard:</p>
+  <pre>Note:  C#4 D#4     F#4 G#4 A#4
+Key:    w   e       t   y   u
+Note: C4  D4  E4  F4  G4  A4  B4  C5
+Key:  a   s   d   f   g   h   j   k</pre>
   <p>Note: you may need to quit and restart Chrome to update the available MIDI ports</p>
   <p>
   	<label >MIDI Input</label>
