added update/checkout version support

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -5,6 +5,7 @@
   </head>
   <body>
     <h2><a href="edit/">Muzicodes Editor</a></h2>
+    <h2><a href="update">Software Update</a></h2>
     <h2>Direct access to views</h2>
     <p>Usage: parameter 'f' = experience filename (master)</br/>
        parameter 'r' = room name (master/slave)</br/>
