fix #14 settings/editor add author field and machine nickname; fix #15 allow recording of audio

--- a/server/public/master.html
+++ b/server/public/master.html
@@ -28,9 +28,12 @@
       .prefix-precondition-false { color: grey; }
       .precondition-true { color: red; }
       .precondition-false { color: grey; }
+      .recordingstatus { font-size: 200%; color: red; }
+      .recording { font-size: 200%; }
     </style>
   </head>
   <body>
+    <div id='recording'></div>
     <div class="container">
       <svg id="main" class="main">
       </svg>
