--- a/server/public/index.html
+++ b/server/public/index.html
@@ -5,7 +5,8 @@
   </head>
   <body>
     <h2><a href="edit/">Muzicodes Editor</a></h2>
-    <h2><a href="update">Software Update</a></h2>
+    <p><a href="settings">Global Settings</a></p>
+    <p><a href="update">Software Update</a></p>
     <h2>Direct access to views</h2>
     <p>Usage: parameter 'f' = experience filename (master)</br/>
        parameter 'r' = room name (master/slave)</br/>
