--- a/server/public/editor.html
+++ b/server/public/editor.html
@@ -10,7 +10,10 @@
   <script src="/vendor/angular-resource/angular-resource.js"></script>
   <script src="/vendor/angular-animate/angular-animate.js"></script>
   <script src="/vendor/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+  <script src="/js/audio.js"></script>
   <script src="/js/editor.js"></script>
+	<script src="/vendor/socket.io-1.2.0.js"></script>
+	<script src="/vendor/d3.v3.min.js" charset="utf-8"></script>
 </head>
 <body>
 
