--- a/server/public/editor.html
+++ b/server/public/editor.html
@@ -14,6 +14,7 @@
   <script src="/js/editor.js"></script>
   <script src="/js/viz.js"></script>
   <script src="/js/stream.js"></script>
+  <script src="/js/filters.js"></script>
 	<script src="/vendor/socket.io-1.2.0.js"></script>
 </head>
 <body>
