--- a/server/public/editor.html
+++ b/server/public/editor.html
@@ -5,6 +5,7 @@
   <title>Editor</title>
   <link rel="stylesheet" href="/vendor/bootstrap/dist/css/bootstrap.css">
   <link rel="stylesheet" href="/css/app.css">
+  <link rel="stylesheet" href="/css/viz.css">
   <script src="/vendor/angular/angular.js"></script>
   <script src="/vendor/angular-route/angular-route.js"></script>
   <script src="/vendor/angular-resource/angular-resource.js"></script>
