--- a/server/public/editor.html
+++ b/server/public/editor.html
@@ -11,6 +11,8 @@
   <script src="/vendor/angular-resource/angular-resource.js"></script>
   <script src="/vendor/angular-animate/angular-animate.js"></script>
   <script src="/vendor/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+  <script src="/js/socket.js"></script>
+  <script src="/js/logging.js"></script>
   <script src="/js/audio.js"></script>
   <script src="/js/editor.js"></script>
   <script src="/js/viz.js"></script>
