--- a/server/public/index.html
+++ b/server/public/index.html
@@ -15,9 +15,9 @@
        parameter 'o' = midi output name (master)
        parameter 'c' = output channel (master/slave), default ""<br/>
     </p>
-    <p><a href="master.html?f=example.json">Default Master (master.html)</a></p>
+    <p><a href="player.html#?f=example.json">Default Master (master.html)</a></p>
     <p><a href="fullscreenslave.html">Default (full-screen) Slave (fullscreenslave.html)</a></p>
-    <p><a href="master.html?f=example.json&r=test&p=1234">Master 'test'</a></p>
+    <p><a href="player.html#?f=example.json&r=test&p=1234">Master 'test'</a></p>
     <p><a href="fullscreenslave.html?r=test">Slave 'test'</a></p>
   </body>
 </html>
