ported soft keyboard to player and editor

--- a/server/public/player.html
+++ b/server/public/player.html
@@ -2,10 +2,11 @@
 <html lang="en" ng-app="playerApp">
 <head>
 <meta charset="utf-8">
-<title>Editor</title>
+<title>Muzicodes Player</title>
 <link rel="stylesheet" href="/vendor/bootstrap/dist/css/bootstrap.css">
 <link rel="stylesheet" href="/css/player.css">
 <link rel="stylesheet" href="/css/viz.css">
+<link rel="stylesheet" href="/css/softkeyboard.css">
 <script src="/vendor/angular/angular.js"></script>
 <script src="/vendor/angular-route/angular-route.js"></script>
 <script src="/vendor/angular-resource/angular-resource.js"></script>
@@ -14,6 +15,7 @@
 <script src="/js/socket.js"></script>
 <script src="/js/logging.js"></script>
 <script src="/js/audio.js"></script>
+<script src="/js/softkeyboard.js"></script>
 <script src="/js/player.js"></script>
 <script src="/js/viz.js"></script>
 <script src="/js/stream.js"></script>
@@ -28,6 +30,7 @@
 			<span id="recordingstatus" class="recordingstatus">{{recordingStatus}}</span><button id="stoprecording" class="recording" ng-click="stopRecording()" ng-disabled="recordingStopped" ng-class="{disabled: recordingStopped}">Stop</button><button class="recording" id="reload" ng-click="reload()">Reload</button>
 		</div>
 		<div class="col-md-8">
+			<softkeyboard on-note="onNote(note)"></softkeyboard>
 			<span>{{ state=='audioinput' ? 'Running with Audio' : ( state=='midiinput' ? 'Running with Midi' : ( state=='loading' ? 'Loading...' : (state=='loaded' ? 'Initialising...' : (state=='error' ? 'Sorry, something went wrong' : 'Unknown state ('+state+')' )))) }}</span>
 			<span>; Experience {{ experienceFile }}; Room "{{ room }}"; Channel "{{ channel }}"</span>
 		</div>
