--- a/server/public/editor.html
+++ b/server/public/editor.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="/vendor/bootstrap/dist/css/bootstrap.css">
   <link rel="stylesheet" href="/css/app.css">
   <link rel="stylesheet" href="/css/viz.css">
+  <link rel="stylesheet" href="/css/softkeyboard.css">
   <script src="/vendor/angular/angular.js"></script>
   <script src="/vendor/angular-route/angular-route.js"></script>
   <script src="/vendor/angular-resource/angular-resource.js"></script>
@@ -14,6 +15,7 @@
   <script src="/js/socket.js"></script>
   <script src="/js/logging.js"></script>
   <script src="/js/audio.js"></script>
+  <script src="/js/softkeyboard.js"></script>
   <script src="/js/editor.js"></script>
   <script src="/js/viz.js"></script>
   <script src="/js/stream.js"></script>
