--- a/server/public/editor.html
+++ b/server/public/editor.html
@@ -21,6 +21,7 @@
   <script src="/js/stream.js"></script>
   <script src="/js/filters.js"></script>
   <script src="/js/midi.js"></script>
+  <script src="/js/codeui.js"></script>
 	<script src="/vendor/socket.io-1.2.0.js"></script>
 </head>
 <body>
