using new codes in player

--- a/server/public/player.html
+++ b/server/public/player.html
@@ -19,6 +19,9 @@
 <script src="/js/player.js"></script>
 <script src="/js/viz.js"></script>
 <script src="/js/stream.js"></script>
+<script src="/js/codeui.js"></script>
+<script src="/js/codeuiparser.js"></script>
+<script src="/js/noteprocessor.js"></script>
 <!-- <script src="/js/filters.js"></script> -->
 <script src="/js/midi.js"></script>
 <script src="/vendor/socket.io-1.2.0.js"></script>
