--- a/server/public/player.html
+++ b/server/public/player.html
@@ -44,7 +44,7 @@
 		</div>
 	</div>
 	<div class="row">
-		<mus-partcodes class="col-md-4" markers="markers" last-group="lastGroup" experience-state="experienceState"></mus-partcodes>
+		<mus-partcodes class="col-md-4" markers="markers" last-group="lastGroup" experience-state="experienceState" code-matchers="codeMatchers"></mus-partcodes>
 		<div class="col-md-4"  id="state">
 			<p>State (variables):</p>
 			<ul><li ng-repeat="(name,value) in experienceState">{{name}}={{value}}</ul>
