added metronome (visual) and tap tempo to context directive

--- a/server/public/editor.html
+++ b/server/public/editor.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="/css/app.css">
   <link rel="stylesheet" href="/css/viz.css">
   <link rel="stylesheet" href="/css/softkeyboard.css">
+  <link rel="stylesheet" href="/css/context.css">
   <script src="/vendor/angular/angular.js"></script>
   <script src="/vendor/angular-route/angular-route.js"></script>
   <script src="/vendor/angular-resource/angular-resource.js"></script>
@@ -24,6 +25,7 @@
   <script src="/js/codeui.js"></script>
   <script src="/js/codeuiparser.js"></script>
   <script src="/js/noteprocessor.js"></script>
+  <script src="/js/context.js"></script>
 	<script src="/vendor/socket.io-1.2.0.js"></script>
 </head>
 <body>
