--- a/server/public/player.html
+++ b/server/public/player.html
@@ -7,6 +7,7 @@
 <link rel="stylesheet" href="/css/player.css">
 <link rel="stylesheet" href="/css/viz.css">
 <link rel="stylesheet" href="/css/softkeyboard.css">
+<link rel="stylesheet" href="/css/context.css">
 <script src="/vendor/angular/angular.js"></script>
 <script src="/vendor/angular-route/angular-route.js"></script>
 <script src="/vendor/angular-resource/angular-resource.js"></script>
@@ -24,6 +25,7 @@
 <script src="/js/noteprocessor.js"></script>
 <!-- <script src="/js/filters.js"></script> -->
 <script src="/js/midi.js"></script>
+<script src="/js/context.js"></script>
 <script src="/vendor/socket.io-1.2.0.js"></script>
 </head>
 <body ng-controller='PlayerCtrl'>
@@ -31,6 +33,7 @@
 	<div id='header' class="row">
 		<div class="col-md-4" uib-collapse="!recording && !listening">
 			<span id="recordingstatus" class="recordingstatus">{{recordingStatus}}</span><button id="stoprecording" class="recording" ng-click="stopRecording()" ng-disabled="recordingStopped" ng-class="{disabled: recordingStopped}">Stop</button><button class="recording" id="reload" ng-click="reload()">Reload</button>
+			<mus-context context="context"></mus-context>
 		</div>
 		<div class="col-md-8">
 			<softkeyboard on-note="onNote(note)"></softkeyboard>
