note selection in player note view, broadcast to editors via server

--- a/server/public/player.html
+++ b/server/public/player.html
@@ -43,7 +43,7 @@
 	</div>
 	<div class="row">
 		<div class="col-md-12">
-			<note-roll id='note-roll' notes="notes" time="time" groups="groups" period="maxTimeWindow-2" height="200" context="context"></note-roll>
+			<note-roll id='note-roll' notes="notes" time="time" groups="groups" period="maxTimeWindow-2" height="200" context="context" onselect="selectNotes(notes)"></note-roll>
 		</div>
 	</div>
 	<div class="row">
