--- a/server/public/editor.html
+++ b/server/public/editor.html
@@ -28,7 +28,7 @@
   <script src="/js/context.js"></script>
 	<script src="/vendor/socket.io-1.2.0.js"></script>
 </head>
-<body>
+<body ng-controller='EditorCtrl as editor'>
 
   <div ng-view></div>
 
