--- a/server/public/editor.html
+++ b/server/public/editor.html
@@ -26,6 +26,7 @@
   <script src="/js/codeuiparser.js"></script>
   <script src="/js/noteprocessor.js"></script>
   <script src="/js/context.js"></script>
+  <script src="/js/audioout.js"></script>
 	<script src="/vendor/socket.io-1.2.0.js"></script>
 </head>
 <body ng-controller='EditorCtrl as editor'>
