reorganise editor UI layout with 2 tabbed areas

--- a/server/public/editor.html
+++ b/server/public/editor.html
@@ -2,7 +2,7 @@
 <html lang="en" ng-app="editorApp">
 <head>
   <meta charset="utf-8">
-  <title>Editor</title>
+  <title>Muzicode Editor</title>
   <link rel="stylesheet" href="/vendor/bootstrap/dist/css/bootstrap.css">
   <link rel="stylesheet" href="/css/app.css">
   <link rel="stylesheet" href="/css/viz.css">
