skeleton for osc send

--- a/server/public/editor.html
+++ b/server/public/editor.html
@@ -22,6 +22,7 @@
   <script src="/js/stream.js"></script>
   <script src="/js/filters.js"></script>
   <script src="/js/midi.js"></script>
+  <script src="/js/osc.js"></script>
   <script src="/js/codeui.js"></script>
   <script src="/js/codeuiparser.js"></script>
   <script src="/js/noteprocessor.js"></script>
