--- a/server/public/player.html
+++ b/server/public/player.html
@@ -25,6 +25,7 @@
 <script src="/js/noteprocessor.js"></script>
 <!-- <script src="/js/filters.js"></script> -->
 <script src="/js/midi.js"></script>
+<script src="/js/osc.js"></script>
 <script src="/js/context.js"></script>
 <script src="/vendor/socket.io-1.2.0.js"></script>
 </head>
