--- a/server/public/player.html
+++ b/server/public/player.html
@@ -33,7 +33,7 @@
 
 	<div id='header' class="row">
 		<div class="col-md-4" uib-collapse="!recording && !listening">
-			<span id="recordingstatus" class="recordingstatus">{{recordingStatus}}</span><button id="stoprecording" class="recording" ng-click="stopRecording()" ng-disabled="recordingStopped" ng-class="{disabled: recordingStopped}">Stop</button><button class="recording" id="reload" ng-click="reload()">Reload</button>
+			<inputmeter width="100" ng-if="!recordingStopped"></inputmeter><span id="recordingstatus" class="recordingstatus">{{recordingStatus}}</span><button id="stoprecording" class="recording" ng-click="stopRecording()" ng-disabled="recordingStopped" ng-class="{disabled: recordingStopped}">Stop</button><button class="recording" id="reload" ng-click="reload()">Reload</button>
 			<mus-context context="context"></mus-context>
 		</div>
 		<div class="col-md-8">
