player fixes: no extra trigger for code note atEnd; reload same url

--- a/server/public/player.html
+++ b/server/public/player.html
@@ -58,7 +58,7 @@
 			<p>State (variables):</p>
 			<ul><li ng-repeat="(name,value) in experienceState">{{name}}={{value}}</ul>
 		</div>
-		<url-view class="col-md-4 output" action-url="actionUrl"></url-view>
+		<url-view class="col-md-4 output" action-url="actionUrl" refresh="actionRefresh"></url-view>
 	</div>
 </body>
 </html>
