fixes to partcode feedback with per-profile filters

--- a/server/public/player.html
+++ b/server/public/player.html
@@ -54,7 +54,7 @@
 	</div>
 	<div class="row">
 		<div  class="col-md-4">
-			<mus-partcodes markers="markers" last-group="lastGroup" experience-state="experienceState" code-matchers="codeMatchers"></mus-partcodes>
+			<mus-partcodes markers="markers" last-groups="lastGroups" experience-state="experienceState" code-matchers="codeMatchers"></mus-partcodes>
 		</div>
 		<div class="col-md-4"  id="state">
 			<p>State (variables):</p>
