added post /input for control inputs

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -19,5 +19,6 @@
     <p><a href="fullscreenslave.html">Default (full-screen) Slave (fullscreenslave.html)</a></p>
     <p><a href="player.html#?f=example.json&r=test&p=1234">Master 'test'</a></p>
     <p><a href="fullscreenslave.html?r=test">Slave 'test'</a></p>
+    <p><a href="postinput.html">Post control input test form</a></p>
   </body>
 </html>
