added script support for Math,Number,String; added params to POST input

--- a/server/public/postinput.html
+++ b/server/public/postinput.html
@@ -13,6 +13,8 @@
 				<label>PIN:</label><input name="pin" type="text">
 				<label>Control Input:</label><input name="name" type="text">
 				<label>Client:</label><input name="client" type="text" value="testform">
+				<label>Extra parameter extra1 (for example):</label><input name="extra1" type="text" value="">
+				<label>Extra parameter extra2 (for example):</label><input name="extra2" type="text" value="">
 				<br>
 				<input name="Submit" type="submit">			
 		</form>
