--- a/server/public/player.html
+++ b/server/public/player.html
@@ -13,6 +13,7 @@
 <script src="/vendor/angular-resource/angular-resource.js"></script>
 <script src="/vendor/angular-animate/angular-animate.js"></script>
 <script src="/vendor/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+<script src="/vendor/uuid.js"></script>
 <script src="/js/socket.js"></script>
 <script src="/js/logging.js"></script>
 <script src="/js/audio.js"></script>
@@ -27,6 +28,7 @@
 <script src="/js/midi.js"></script>
 <script src="/js/osc.js"></script>
 <script src="/js/context.js"></script>
+<script src="/js/mpm-agent.js"></script>
 <script src="/vendor/socket.io-1.2.0.js"></script>
 </head>
 <body ng-controller='PlayerCtrl' ng-keydown="keydown($event)" ng-keyup="keyup($event)">
